tests/NormalTests/paczka1/fuzzy1/98847478.err
Error in line 3: 3gy07ZcqfC A897 66,6
Error in line 10: LeJs2 S758 28,9
Error in line 29: lbTiMeGSvy A897 21,1
Error in line 25: LeJs2 A406 172,1
Error in line 35: LeJs2 S758 93,8
Error in line 40: lbTiMeGSvy A712 -4,5
